--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
-  <p>some text</p>
+  <span class="text-block">some new text</span>
+  <p>some more text</p>
+  <img src="img/avatar.jpg" alt="Avatar">
 </body>
 </html>
