feat: add basic structure to index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
   <title>Alexander Martinovich</title>
 </head>
 <body>
-  <span class="text-block">some new text</span>
-  <p>some more text</p>
-  <img src="img/avatar.jpg" alt="Avatar">
+  <header>
+    <nav>      
+
+    </nav>
+  </header>
+  <main>
+    <span>some new text</span>
+    <p>some more text</p>
+    <img src="img/avatar.jpg" alt="Avatar">
+    
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
