--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   <title>Alexander Martinovich</title>
 </head>
 <body>
-  <div>
+  <div class="wrapper">
     <header>
       <nav>      
         <!-- Тут будут ссылки-->
+        <span>Navigation panel</span>
       </nav>
     </header>
 
     <main>
-      <div>
+      <br>
         <h1>Alexander Martinovich</h1>
         <img src="img/avatar.jpg" alt="почти фото">
 
@@ -25,10 +26,10 @@
       
         <h2>Contacts:</h2>
         <ul>
-          <li>Phone: +7(962)360-42-14</li>
-          <li>Telegram: @Te1epuz</li>
-          <li>Discord: Tappa#8144 / @te1epuz</li>
-          <li>E-mail: Alexander_Martinovich@msn.com</li>
+          <li><b>Phone:</b> +7(962)360-42-14</li>
+          <li><b>Telegram:</b> @Te1epuz</li>
+          <li><b>Discord:</b> Tappa#8144 / @te1epuz</li>
+          <li><b>E-mail:</b> Alexander_Martinovich@msn.com</li>
         </ul>
 
         <h2>Skills:</h2>
@@ -71,13 +72,14 @@
         <ul>
           <li>English - Upper-intermediate, IETLS 7.5 (2010)</li>
           <li>Russian - Native</li>
-        </ul>  
+        </ul>
+        <br>  
     </main>
 
     <footer>
       <a href="https://github.com/Te1epuz">Мой Github</a>
       <span>2022</span>
-      <a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="логотип RS school" width="64" height="32"></a>
+      <a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="логотип RS school" width="64" height="24"></a>
     </footer>
   </div>
 </body>
