--- a/index.html
+++ b/index.html
@@ -11,20 +11,27 @@
   <div class="wrapper">
     <header>
       <nav>      
-        <!-- Тут будут ссылки-->
-        <span>Navigation panel</span>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contacts">Contacts</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#code_example">Code example</a></li>
+          <li><a href="#work_experience">Work experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#courses">Courses</a></li>
+          <li><a href="#languages">Languages</a></li>
+        </ul>        
       </nav>
     </header>
 
     <main>
-      <br>
         <h1>Alexander Martinovich</h1>
         <img src="img/avatar.jpg" alt="почти фото">
 
-        <h2>About Myself:</h2>
+        <h2 id="about">About Myself:</h2>
         <p>I like IT and want to find my place in it.</p> 
       
-        <h2>Contacts:</h2>
+        <h2 id="contacts">Contacts:</h2>
         <ul>
           <li><b>Phone:</b> +7(962)360-42-14</li>
           <li><b>Telegram:</b> @Te1epuz</li>
@@ -32,7 +39,7 @@
           <li><b>E-mail:</b> Alexander_Martinovich@msn.com</li>
         </ul>
 
-        <h2>Skills:</h2>
+        <h2 id="skills">Skills:</h2>
         <ul>
           <li>HTML, CSS</li>
           <li>GitHub</li>
@@ -40,7 +47,7 @@
           <li>Pyton</li>
         </ul>
 
-        <h2>Code example:</h2>
+        <h2 id="code_example">Code example:</h2>
         <pre>
           <code>
     new_city_list=[]
@@ -53,27 +60,26 @@
           </code>
         </pre>
 
-        <h2>Work experience:</h2>
+        <h2 id="work_experience">Work experience:</h2>
         <p>No IT-related work experience yet...</p>
 
-        <h2>Projects:</h2>
+        <h2 id="projects">Projects:</h2>
         <ul>
           <li><a href="https://github.com/Te1epuz/test_bot/blob/master/bot.py">Telegram bot</a></li>
           <li>More will be added soon (tm)</li>
         </ul>
 
-        <h2>Courses:</h2>
+        <h2 id="courses">Courses:</h2>
         <ul>
           <li>JS / FRONT-END. STAGE 0 (RU) (current)</li>
           <li>Python for begginers (2019)</li>
         </ul>
 
-        <h2>Languages:</h2>
+        <h2 id="languages">Languages:</h2>
         <ul>
           <li>English - Upper-intermediate, IETLS 7.5 (2010)</li>
           <li>Russian - Native</li>
         </ul>
-        <br>  
     </main>
 
     <footer>
