fix: adjust fonts, paddings and margins

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="wrapper">
     <header>
+      <img src="img/avatar.jpg" alt="почти фото" width="15" height="15">
       <nav>      
         <ul>
           <li><a href="#about">About</a></li>
@@ -24,7 +25,7 @@
       </nav>
     </header>
 
-    <main>
+    <main id="top">
         <h1>Alexander Martinovich</h1>
         <img src="img/avatar.jpg" alt="почти фото">
 
@@ -56,12 +57,11 @@
         new_city_list = new_city_list.split(';')
             
     city_list = new_city_list.copy()
-    last_letter = ''
-          </code>
+    last_letter = ''</code>
         </pre>
 
         <h2 id="work_experience">Work experience:</h2>
-        <p>No IT-related work experience yet...</p>
+        <p><i>No IT-related work experience yet...</i></p>
 
         <h2 id="projects">Projects:</h2>
         <ul>
@@ -80,6 +80,7 @@
           <li>English - Upper-intermediate, IETLS 7.5 (2010)</li>
           <li>Russian - Native</li>
         </ul>
+        <a href="#top">back to top</a>
     </main>
 
     <footer>
