--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <title>Alexander Martinovich</title>
 </head>
 <body>
-  <div class="wrapper">
+  <div class="wrapper" id="top">
     <header>
-      <img src="img/avatar.jpg" alt="почти фото" width="15" height="15">
       <nav>      
         <ul>
           <li><a href="#about">About</a></li>
@@ -25,7 +24,7 @@
       </nav>
     </header>
 
-    <main id="top">
+    <main>
         <h1>Alexander Martinovich</h1>
         <img src="img/avatar.jpg" alt="почти фото">
 
