fix: add more fixes

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
         <h2 id="courses">Courses:</h2>
         <ul>
-          <li>JS / FRONT-END. STAGE 0 (RU) (current)</li>
+          <li>JS / FRONT-END. STAGE 1 (RU) (current)</li>
+          <li>JS / FRONT-END. STAGE 0 (RU) (2022)</li>
           <li>Python for begginers (2019)</li>
         </ul>
 
