fix: add courses

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <header>
       <nav>      
         <ul>
-          <li><a href="#about">About&nbsp</a></li>
-          <li><a href="#contacts">Contacts&nbsp</a></li>
-          <li><a href="#skills">Skills&nbsp</a></li>
-          <li><a href="#code_example">Code example&nbsp</a></li>
-          <li><a href="#work_experience">Work experience&nbsp</a></li>
-          <li><a href="#projects">Projects&nbsp</a></li>
-          <li><a href="#courses">Courses&nbsp</a></li>
-          <li><a href="#languages">Languages&nbsp</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contacts">Contacts</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#code_example">Code example</a></li>
+          <li><a href="#work_experience">Work experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#courses">Courses</a></li>
+          <li><a href="#languages">Languages</a></li>
         </ul>        
       </nav>
     </header>
@@ -70,7 +70,8 @@
 
         <h2 id="courses">Courses:</h2>
         <ul>
-          <li>JS / FRONT-END. STAGE 0 (RU) (current)</li>
+          <li>JS / FRONT-END. STAGE 1 (RU) (current)</li>
+          <li>JS / FRONT-END. STAGE 0 (RU) (2022)</li>
           <li>Python for begginers (2019)</li>
         </ul>
 
