--- a/index.html
+++ b/index.html
@@ -23,14 +23,11 @@
         </ul>
       </nav>
     </header>
-
     <main>
         <h1>Alexander Martinovich</h1>
         <img src="img/avatar.jpg" alt="почти фото">
-
         <h2 id="about">About Myself:</h2>
-        <p>I like IT and want to find my place in it.</p> 
-      
+        <p>I like IT and want to find my place in it.</p>      
         <h2 id="contacts">Contacts:</h2>
         <ul>
           <li><b>Phone:</b> +7(962)360-42-14</li>
@@ -38,7 +35,6 @@
           <li><b>Discord:</b> Tappa#8144 / @te1epuz</li>
           <li><b>E-mail:</b> Alexander_Martinovich@msn.com</li>
         </ul>
-
         <h2 id="skills">Skills:</h2>
         <ul>
           <li>HTML, CSS</li>
@@ -46,35 +42,32 @@
           <li>VS Code</li>
           <li>Pyton</li>
         </ul>
-
         <h2 id="code_example">Code example:</h2>
         <pre>
           <code>
     new_city_list=[]
     with open('cities.csv', 'r', encoding='utf-8') as f:
         new_city_list = f.read()
-        new_city_list = new_city_list.split(';')
-            
+        new_city_list = new_city_list.split(';')            
     city_list = new_city_list.copy()
     last_letter = ''</code>
         </pre>
-
         <h2 id="work_experience">Work experience:</h2>
         <p><i>No IT-related work experience yet...</i></p>
-
         <h2 id="projects">Projects:</h2>
         <ul>
+          <li><a href="https://te1epuz.github.io/codejam-eldritch/index.html">Eldritch deck shuffle helper</a></li>
+          <li><a href="https://te1epuz.github.io/travel/travel/index.html">Travel html task</a></li>
+          <li><a href="https://te1epuz.github.io/momentum/momentum/">Momentum task</a></li>
           <li><a href="https://github.com/Te1epuz/test_bot/blob/master/bot.py">Telegram bot</a></li>
           <li>More will be added soon (tm)</li>
         </ul>
-
         <h2 id="courses">Courses:</h2>
         <ul>
           <li>JS / FRONT-END. STAGE 1 (RU) (current)</li>
           <li>JS / FRONT-END. STAGE 0 (RU) (2022)</li>
           <li>Python for begginers (2019)</li>
         </ul>
-
         <h2 id="languages">Languages:</h2>
         <ul>
           <li>English - Upper-intermediate, IETLS 7.5 (2010)</li>
@@ -82,7 +75,6 @@
         </ul>
         <a href="#top">back to top</a>
     </main>
-
     <footer>
       <a href="https://github.com/Te1epuz">Мой Github</a>
       <span>2022</span>
